New Solution algorithm: LinearAlgebra